--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.0",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
     "@next/eslint-plugin-next": "^14.2.3",
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.27.0",
     "eslint-config-next": "^14.0.3",
