--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "swr": "^1.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
