--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.7",
     "framer-motion": "^11.11.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
@@ -21,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.0",
     "swr": "^1.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
